# CppOrbitalMechanics

./: .gitignore  OrbitProcessing.m  README.md  orbital_propagation.cpp
source/: CMakeLists.txt  derivatives.cpp  derivatives.h  orbital_propagation.cpp
